--- a/.github/workflows/audit.yml
+++ b/.github/workflows/audit.yml
@@ -28,7 +28,7 @@ jobs:
         run: npm ci
 
       - name: 🔍 ESLint validation
-        run: npx eslint --ignore-path .gitignore .
+        run: npx eslint . --ext .js,.jsx,.ts,.tsx
 
       - name: 📏 Check commit message length
         uses: gsactions/commit-message-checker@v1
