--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,12 +2,17 @@ sonar.projectKey=abelguevaralanda_technical-test-next
 sonar.organization=abelito86
 
 # This is the name and version displayed in the SonarCloud UI.
-#sonar.projectName=technical-test-next
-#sonar.projectVersion=1.0
+sonar.projectName=technical-test-next
+sonar.projectVersion=1.0
 
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-#sonar.sources=.
+sonar.sources=./app
 
 # Encoding of the source code. Default is default system encoding
-#sonar.sourceEncoding=UTF-8
+sonar.sourceEncoding=UTF-8
+
+sonar.test.inclusions=src/**/*.test.ts, src/**/*.test.tsx
+sonar.coverage.exclusions=src/index.tsx, src/reportWebVitals.ts, src/react-app-env.d.ts, src/setupTests.ts
+
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
