Fix workflow for sonar

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -12,7 +12,5 @@ sonar.sources=./app
 # Encoding of the source code. Default is default system encoding
 sonar.sourceEncoding=UTF-8
 
-sonar.test.inclusions=src/**/*.test.ts, src/**/*.test.tsx
-sonar.coverage.exclusions=src/index.tsx, src/reportWebVitals.ts, src/react-app-env.d.ts, src/setupTests.ts
+sonar.test.inclusions=app/**/*.test.ts, app/**/*.test.tsx
 
-sonar.javascript.lcov.reportPaths=coverage/lcov.info
