--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -13,4 +13,5 @@ sonar.sources=./app
 sonar.sourceEncoding=UTF-8
 
 sonar.test.inclusions=app/**/*.test.ts, app/**/*.test.tsx
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
 
