--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,10 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      - name: Node Modules
+        run: npm ci
+      - name: Coverage
+        run: npm test -- --coverage --watchAll=false
       - name: SonarQube Scan
         uses: SonarSource/sonarqube-scan-action@v4
         env:
