add exclusion coverage

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -13,5 +13,6 @@ sonar.sources=./app
 sonar.sourceEncoding=UTF-8
 
 sonar.test.inclusions=app/**/*.test.ts, app/**/*.test.tsx
+sonar.coverage.exclusions=app/movies/(overview)/page.tsx
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
 
