--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "cy:open": "cypress open",
+    "cy:open": "npx nyc instrument app instrumented && cypress open",
     "prepare": "husky",
     "test": "jest",
     "test:watch": "jest --watch"
@@ -29,8 +29,11 @@
   },
   "devDependencies": {
     "@babel/preset-env": "^7.26.0",
+    "@cypress/code-coverage": "^3.13.10",
     "@eslint/eslintrc": "^3",
+    "@istanbuljs/nyc-config-typescript": "^1.0.2",
     "@stylistic/eslint-plugin": "^2.13.0",
+    "@testing-library/cypress": "^10.0.3",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
@@ -48,6 +51,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-esm-transformer": "^1.0.0",
+    "nyc": "^17.1.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "ts-jest": "^29.2.5",
